# ChangeLog for net-dns/bind-tools
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-dns/bind-tools/ChangeLog,v 1.254 2014/01/31 18:57:24 idl0r Exp $

*bind-tools-9.9.5 (31 Jan 2014)

  31 Jan 2014; Christian Ruppert <idl0r@gentoo.org> +bind-tools-9.9.5.ebuild:
  Version bump. Also disable tests for now, bug 479092

  30 Jan 2014; Markus Meier <maekke@gentoo.org> bind-tools-9.9.4.ebuild:
  arm stable, bug #492254

  27 Jan 2014; Akinori Hattori <hattya@gentoo.org> bind-tools-9.9.4.ebuild:
  ia64 stable wrt bug #492254

  27 Jan 2014; Jeroen Roovers <jer@gentoo.org> bind-tools-9.9.4.ebuild:
  Stable for HPPA (bug #492254).

  18 Jan 2014; Christian Ruppert <idl0r@gentoo.org> bind-tools-9.9.3_p2.ebuild,
  bind-tools-9.9.4.ebuild:
  Fix openssl dependencies as request per bug 498470

*bind-tools-9.9.4 (13 Oct 2013)

  13 Oct 2013; Christian Ruppert <idl0r@gentoo.org> +bind-tools-9.9.4.ebuild:
  Bump

  03 Sep 2013; Agostino Sarubbo <ago@gentoo.org> -bind-tools-9.9.2.ebuild:
  Remove old

  09 Aug 2013; Agostino Sarubbo <ago@gentoo.org> bind-tools-9.9.3_p2.ebuild:
  Stable for arm, wrt bug #478316

  08 Aug 2013; Agostino Sarubbo <ago@gentoo.org> bind-tools-9.9.3_p2.ebuild:
  Stable for sh, wrt bug #478316

  06 Aug 2013; Agostino Sarubbo <ago@gentoo.org> bind-tools-9.9.3_p2.ebuild:
  Stable for s390, wrt bug #478316

  01 Aug 2013; Agostino Sarubbo <ago@gentoo.org> bind-tools-9.9.3_p2.ebuild:
  Stable for x86, wrt bug #478316

  01 Aug 2013; Agostino Sarubbo <ago@gentoo.org> bind-tools-9.9.3_p2.ebuild:
  Stable for sparc, wrt bug #478316

  01 Aug 2013; Agostino Sarubbo <ago@gentoo.org> bind-tools-9.9.3_p2.ebuild:
  Stable for ppc, wrt bug #478316

  01 Aug 2013; Agostino Sarubbo <ago@gentoo.org> bind-tools-9.9.3_p2.ebuild:
  Stable for ppc64, wrt bug #478316

  01 Aug 2013; Agostino Sarubbo <ago@gentoo.org> bind-tools-9.9.3_p2.ebuild:
  Stable for ia64, wrt bug #478316
