@@ -8,17 +8,17 @@ DIST bind-9.9.4.tar.gz 7513017 SHA256 fe0f16653382e428b10282ce9850722d19589d66f2
 DIST bind-9.9.5.tar.gz 7729695 SHA256 d4b64c1dde442145a316679acff2df4008aa117ae52dfa3a6bc69efecc7840d1 SHA512 2639e73c0b57a6a34727e65e44a6d4c90e8682145f92a0a543f80fe0d3cdf707287b67d7ff9f1da5cf91a3c23861033b542871bc909ce0f538b4d3d368932574 WHIRLPOOL ad25df5dfebe06db950755d46531ceb36ae5f8dde38d1a53a3ca593bbd62161535b8a611c6a89701ff5853c740a5a2ff5e7f83da3841ea5482718e569b9f9c71
 EBUILD bind-tools-9.9.3_p2.ebuild 2563 SHA256 e197e1e3bcbb4a1591152ee5efc0b7d7dcfef615a3ed43fdc64f5c9d1e12a007 SHA512 4de81a86b1374bd1065a65541e306ae7b847812f679ba60b71804dbb40b956d399172285fdff01844663aafc7b2966bb13a1c207986bd46e9c87d7a6a04db814 WHIRLPOOL 98eb257bb8e85fedca8f305de4d8f8a0ef237876dad84a464cc65f075679c8e26deb8dfb739b11b7abdda1b2df6760f8255ff52db2af862015e56e071730fdd1
 EBUILD bind-tools-9.9.4.ebuild 2578 SHA256 b34524e14fb7ee6ed68e6dcf538b7cca03ba9ebd2f7acb19cf0ab4b7d30f7ed2 SHA512 4add72d2c9c74ae8ec8ba33f5658b2fbe21b1e05114198a5beab0d2d1f2da86709b985f90da721ace4d651e959a6a3e56308457f494d7a121a1e6891a025c5ef WHIRLPOOL 41f96a4e5d9386de81ac120a82a753d52071524c65238d56093e75cb0ffa0b3ae53276cf75c9b1e99fefb49a85457c632070389aee6bcc91458bf1995e29e28f
-EBUILD bind-tools-9.9.5.ebuild 2631 SHA256 551c20b7033fff86affa7948ab13d8c7d6464798655fe78d10ebf6a2a8bcf6ce SHA512 d83579fe57d69b0380d6264847d4ed241c9e0798eeda4bd0d0e7d3c7948882a4351f62cf452bd592b306b5c38032967f7ec719d193816626e9bea04775cf31aa WHIRLPOOL 67638a2f9b42db6cdf822fca72b07ef7c384bcd0cb5907576cfdb9867e2042b407e4dbaf76cefffbd7ff96585bdb554f179584ba119f3abcf80058703d99582f
-MISC ChangeLog 37229 SHA256 014818070652db71717e558edae317a9ff15782195a70a896ec2f331d667503f SHA512 ca8efb557a825aa712727127411a33eef380c18418db58811d484a1c2a9b6abdc38fd900d7aaa855f5597a6d6ff13ad890f663bb9e5ffc9ded8672c5e5d1761f WHIRLPOOL 308c36183fe5aada81a02332d96c6e9aef43f547079bbd137581c30b059e1e070454f8f6ef716691f6cd00d27946dc1bd34e3df288818ccb12906b3d587a71ff
-MISC metadata.xml 436 SHA256 b1fe05e5e2145121dbc7105242c183175fbaecc32976438ce235587a003f81a1 SHA512 dad8b2161c5e6f76cca7ff82a21e3d3a25e0bfb491337094fbd523542f06d3a349a4ccc691b6eb52c60e2b198eb916c28eba178cf8e9825ef892852c56a0c352 WHIRLPOOL 8e45fbf1cab09aaf6743441e078c178cd6373b8aaa8eadca9eacae00e366af823c69b260748d3d2583339431b848d3d6f82127197166236d4479317877c5003c
+EBUILD bind-tools-9.9.5.ebuild 2735 SHA256 499f0f3b900fdf6ecfbd1e2a2cbd15e00b75461dd2ced812a913222e46457a93 SHA512 9446f79666f9c269d2f6111da824b2b3c549ab01d473e6b7e5a0e87acaf4311e62a588619af5796478c62dfbafcda927d721b131ae34f61bac13fd0561c0c990 WHIRLPOOL 4fd979e3169ad2286e56a9550179e2a67f21655922574713665579077d5d3096088d886a72747c26a9e39a14eac991e83eb489e539b0b5e96403b9a44660327c
+MISC ChangeLog 37349 SHA256 1a606dc9b3fab1bbb98260324f8037010cf8b3d801bcbfcd9ce4982e003712ba SHA512 27845edd99602704c7c68e52e3389d970878e243d3dcc72e7c11e699537b2a84de1b30e22caa50be497d402741f6cfd2de93fa07b171b7dfc8b7653426af2657 WHIRLPOOL 34fa7701809c3761b66ec5916743ef9741c4e7eee932b04f4972b0cd7168444726e318641fd773cb942eb991f457d087f6a4685044f4b365245b2ac2a8e3c59e
+MISC metadata.xml 499 SHA256 8d5d4d0257735d89c3435d0c595aa743e08e79cc8345996a00f1cd0744d92c3e SHA512 d6c960b12a25d46a767131b94712d643c6fcd9508cf9dc02eaff1681749819a0a11615d8fb2b76ba6b78252fa14d21755f05b4f9a7157e16a97a52bdbb688301 WHIRLPOOL d7d8ddf46cfcc638c539d7eea0212086923fdd866b4f9b4c6d1808ead5ccd9bfce63736ede94163998fc50a99664ce36ee923cbdd133dcc033448edb4f7ec0bc
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEbBAEBCAAGBQJS6/IZAAoJEMOx0zmdw4Z1QdMH91BML+ZdiBLJQ3AGH5QnwIfj
-EyBCxYaHqUXgEwCmhrsaHmNguaWkr5zdf0OFIQe7Mzj05iy+rSuBJQUwas9/k2Ih
-wpfq0vmvndAddRrpcjlHjICq2UOQmsXJXrnePz7JwjnCEp/843jvwpiartD7WGvO
-R16bCnTgn5nMQn47Ba0XGhFUCOfmBQ8HVc7yNfLOmYx895UpwYsZDD81umOha2py
-UpSYJdgwjQBdiGH2+oOWViMY/pOg2K7h17s8x+P702SnTvuCzeFXWw+sjQBq7F5T
-YreuQkPTdW/PE1pqEXqyE9UKRUHumCWJG8QgvAbBu2OxyUx0Pea8ll4azEYR0Q==
-=8W/1
+iQEcBAEBCAAGBQJS7BezAAoJEMOx0zmdw4Z1yd0H/1UIiGu8fU5yknQbIJFNRqye
+DYDkKsSB1AaCJL1KtCZhQOxjihkSah8DupRtdvy3EBrC8QGK7ZwxM82ngxXKEX9w
+bS8wEhZoSLo+v5MCCl3QQ0S6kGRMd+MnofNR98BFx6tEiEdPvfGvhoXBXNCYkfNw
+rDJ2Z68TuUjvdSBWMdIMv+59WwHCQ9+UnL5n4fUZBm/XWb061Xoe0JZglErpwkGf
+yqv0f4gmxL2YUv52c8dlseP8Hdl0nOpV7h1AxI8htCO+txsnlTG+0tnCYNWzn/rG
+FlLwRIY4xm+sBG+A8fkfJbLVYWAisoeK2qzNlxwbUzln/nuvAU1RMmdoaRZiZRw=
+=HqMz
 -----END PGP SIGNATURE-----
