@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/bind-tools/bind-tools-9.9.5.ebuild,v 1.1 2014/01/31 18:57:24 idl0r Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/bind-tools/bind-tools-9.9.5.ebuild,v 1.2 2014/01/31 21:37:53 idl0r Exp $
 
 EAPI="5"
 
@@ -18,10 +18,13 @@ SRC_URI="ftp://ftp.isc.org/isc/bind9/${MY_PV}/${MY_P}.tar.gz"
 LICENSE="ISC BSD BSD-2 HPND JNIC RSA openssl"
 SLOT="0"
 KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~x86-fbsd ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris"
-IUSE="doc gssapi idn ipv6 readline ssl urandom xml"
+IUSE="doc gost gssapi idn ipv6 readline ssl urandom xml"
 # no PKCS11 currently as it requires OpenSSL to be patched, also see bug 409687
 
+REQUIRED_USE="gost? ( ssl )"
+
 DEPEND="ssl? ( dev-libs/openssl:0 )
+	gost? ( >=dev-libs/openssl-1.0.0:0[-bindist] )
 	xml? ( dev-libs/libxml2 )
 	idn? ( net-dns/idnkit )
 	gssapi? ( virtual/krb5 )
@@ -69,6 +72,7 @@ src_configure() {
 		$(use_with xml libxml2) \
 		$(use_with gssapi) \
 		$(use_with readline) \
+		$(use_with gost) \
 		${myconf}
 
 	# bug #151839
