@@ -8,6 +8,7 @@
 	<use>
 		<flag name="urandom">Use /dev/urandom instead of /dev/random</flag>
 		<flag name="gssapi">Enable gssapi support</flag>
+		<flag name="gost">Enables gost OpenSSL engine support</flag>
 	</use>
 	<longdescription>ISC's Bind DNS' server tools</longdescription>
 </pkgmetadata>
